--- a/3_LongestEdgeOfPoly/CMakeLists.txt
+++ b/3_LongestEdgeOfPoly/CMakeLists.txt
@@ -3,6 +3,10 @@ project(3_LongestEdgeOfPoly VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories("C:\\Coding\\Common\\FunctionalPlus\\include")
+if(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Clang)")
+    add_compile_options(-Wall -Wextra -Wpedantic -Wshadow)
+endif()
+
+include_directories("../Externals")
 
 add_executable(3_LongestEdgeOfPoly main.cpp)
